<resources>
    <string name="app_name">ProjectManagement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="description">description</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="fragment_detail_description">Fragment Detail Description</string>
    <string name="fragment_detail_name">Fragment Detail Name</string>
</resources>