<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/passwordRepeatRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterEditText"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/userNameRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegisterEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressRegisterEditText"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/emailAddressRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/userNameRegisterEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/passwordRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/passwordRepeatRegisterEditText"
        app:layout_constraintTop_toBottomOf="@+id/userNameRegisterEditText"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRepeatRegisterEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>