<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="20dp"
    tools:context=".TaskFragment">

    <EditText
        android:id="@+id/taskDetailEditTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_detail_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/taskDetailEditTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskDetailEditTextDescription"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:text="@string/fragment_detail_description"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/taskDetailSaveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailEditTextName" />

    <Button
        android:id="@+id/taskDetailSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/taskDetailDeleteButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailEditTextDescription" />

    <Button
        android:id="@+id/taskDetailDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/taskDetailSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/taskDetailSaveButton" />


</androidx.constraintlayout.widget.ConstraintLayout>