<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="20dp"
    tools:context=".TaskListDetailFragment">

    <EditText
        android:id="@+id/taskListDetailEditTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_detail_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/taskListDetailEditTextDescription"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/taskListDetailEditTextDescription"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:text="@string/fragment_detail_description"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/taskListDetailSaveButton"
        app:layout_constraintTop_toBottomOf="@+id/taskListDetailEditTextName"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/taskListDetailDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove Task List\nAnd Contained Tasks "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskListDetailSaveButton" />

    <Button
        android:id="@+id/taskListDetailSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/taskListDetailDeleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskListDetailEditTextDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>